--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 #footer {
-    position: absolute;
+    position: static;
     bottom: 0;
     text-align: center;
 }
@@ -25,8 +25,8 @@ button:hover {
 
 .gif {
     display: inline-block;
-    margin: 0, auto;
-    border: 0;
+    margin: 10px, 10px, 10px, 10px; 
+    border: 10px, 10px, 10px, 10px;
 }
 
 .rating {
